[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="BitmapFont" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="RoomText" type="RichTextLabel" parent="."]
margin_left = 383.429
margin_top = 171.987
margin_right = 701.429
margin_bottom = 240.987
custom_fonts/mono_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "You are in a dark room. In front of you see a person dimly lit by the light of a computer monitor."
text = "You are in a dark room. In front of you see a person dimly lit by the light of a computer monitor."

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 381.292
margin_top = 268.0
margin_right = 704.292
margin_bottom = 492.0
highlight_current_line = true
show_line_numbers = true
smooth_scrolling = true
caret_block_mode = true
caret_blink = true

[node name="Tween" type="Tween" parent="."]

[node name="ObjectText" type="RichTextLabel" parent="."]
margin_right = 239.0
margin_bottom = 212.0
text = "Objects"

[node name="North" type="Button" parent="."]
margin_left = 772.828
margin_top = 49.1095
margin_right = 974.828
margin_bottom = 105.109
text = "North"

[node name="CurrentRoom" type="RichTextLabel" parent="."]
margin_left = 26.0
margin_top = 536.0
margin_right = 349.0
margin_bottom = 576.0

[connection signal="button_up" from="North" to="." method="_on_North_button_up"]
